# mi-modulo-datos

./: .gitignore  README.md  main.py  pyproject.toml
ejercicio-01-formatos/: benchmark_cli.py  generate_data.py  report.md
ejercicio-01-formatos/results/: benchmark_100k.json  benchmark_1m.json  benchmark_500k.json
ejercicio-01-formatos/storage_benchmark/: __init__.py  formats.py  runner.py
ejercicio-02-consultas/: benchmark.py  report_e2.md
ejercicio-02-consultas/engines/: duckdb_engine.py  pandas_engine.py  polars_engine.py
ejercicio-02-consultas/results/: benchmark_results.json
ejercicio-03-sqlite/: README_e3.md  benchmark_queries.py  ingest.py  report_e3.md  schema.sql  schema_design.md
ejercicio-03-sqlite/results/: benchmark_queries.json  ingest_no_wal_chunk25000.json  ingest_wal_chunk25000.json
ejercicio-04-sistema/: README.md  architecture_decision.md  run_benchmark.py
ejercicio-04-sistema/app/: cache.py  db.py  main.py  models.py
ejercicio-04-sistema/benchmarks/: latency_report.md
ejercicio-04-sistema/tests/: test_api.py
