[project]
name = "ejercicio-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "pytest>=9.0.3",
    "uvicorn>=0.46.0",
]
